--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
                         <li><a href="https://www.linkedin.com/in/tareq-alsadaqa-52098032a/">LinkedIn || </a></li>
                         <li><a href="https://github.com/Tareq244">GitHub</a></li>
                     </ul>
-                    <hr>
-                    <h1>Summary:</h1>
+                    <hr><br>
+                    <h1>Summary:</h1><br>
                     <p> Motivated and detail-oriented <b>Computer Science graduate</b> with a solid academic foundation in <b>software engineering, system design,</b> and <b>problem-solving</b>. Skilled in building and maintaining scalable digital solutions with hands-on experience in <b>designing, developing, testing,</b> and <b>deploying applications</b>. </p> <p> Proficient in <b>logical thinking</b>, analytical reasoning, and applying modern development practices to real-world projects. Experienced in both <b>individual</b> and <b>team-based</b> work, demonstrating strong collaboration, adaptability, and the ability to learn and integrate new technologies quickly. </p> <p> Familiar with <b>front-end and back-end development</b> concepts, database management, and API integration, with a continuous drive to enhance technical expertise. </p> <p> Eager to contribute to <b>innovative and forward-thinking development teams</b> where I can apply my skills to deliver impactful solutions, expand my professional knowledge, and grow within a dynamic environment that values creativity, efficiency, and continuous improvement. </p>
                 </div>
             </div>
@@ -83,7 +83,7 @@
                     <ul class="experience-list">
     <li>Volunteered as a <b>Backend Developer</b> for a charitable e-commerce platform unifying local stores.</li>
     <li>Designed, developed, and deployed backend services & RESTful APIs using <b>.NET Core</b> and <b>Entity Framework Core</b>.</li>
-    <li>Handled database management and optimized system performance with <b>SQL Server</b>.</li>
+    <!-- <li>Handled database management and optimized system performance with <b>SQL Server</b>.</li> -->
     <li>Deployed backend services on <b>Railway</b> using Docker.</li>
     <li>Enhanced skills in API development, SQL Server, and C#, while contributing to a meaningful social project.</li>
 </ul>
